--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>TechWizard — Troubleshooting Assistant</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#020617">
-  <link rel="manifest" href="manifest.webmanifest">
+  <link rel="manifest" href="manifest.json">
   <style>
     :root {
       --bg: #020617;
